<?xml version="1.0" encoding="utf-8"?>

<androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.activity.ShowUserActivity">
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="20dp">
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="25dp"
            >
                <ImageView
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        tools:srcCompat="@tools:sample/avatars"
                        android:id="@+id/user_avatar"
                        android:layout_marginRight="25dp"
                        android:layout_marginEnd="25dp"
                        android:contentDescription="@string/avatar"/>
                <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center">
                    <TextView
                            android:text="@string/name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/user_name"
                            android:textSize="24sp"
                            android:textStyle="bold"
                            android:textColor="@color/black"
                            android:layout_marginBottom="5dp"/>
                    <TextView
                            android:text="@string/username"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/user_username"
                            android:textSize="16sp"/>
                </LinearLayout>
            </LinearLayout>
            <TextView
                    android:text="@string/bio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/user_bio"
                    android:textColor="@color/black"
                    android:layout_marginBottom="25dp"
                    android:textSize="16sp"
            />

            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="25dp">
                <TextView
                        android:gravity="center"
                        android:text="@string/company"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:id="@+id/company"
                        android:textColor="@color/black"
                        android:drawablePadding="10dp"
                        android:textSize="16sp"
                        app:drawableLeftCompat="@drawable/baseline_business_black_24"
                        android:layout_marginEnd="20dp"
                        android:layout_marginRight="20dp"/>
                <TextView
                        android:gravity="center"
                        android:text="@string/location"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:id="@+id/location"
                        android:textColor="@color/black"
                        android:drawablePadding="10dp"
                        android:textSize="16sp"
                        app:drawableLeftCompat="@drawable/baseline_location_on_black_24"/>
            </LinearLayout>

            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                <TextView
                        android:layout_marginEnd="20dp"
                        android:layout_marginRight="20dp"
                        android:gravity="center"
                        android:text="@string/followers"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/follower"
                        android:textColor="@color/black"
                        android:drawablePadding="10dp"
                        android:textSize="16sp"
                        app:drawableLeftCompat="@drawable/baseline_people_alt_black_24"/>
                <TextView
                        android:gravity="center"
                        android:text="@string/followings"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:id="@+id/following"
                        android:textColor="@color/black"
                        android:drawablePadding="10dp"
                        android:textSize="16sp"/>
            </LinearLayout>


        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
